src/test/resources/private/typechecking/pass/this/this_03_method+class+member.jova
class Test2 {
    public int x;
}

class Test{
    private Test2 temp() {
        Test2 t;
        return t;
    }

    public int test() {
        return this.temp().x;
    }
}